--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,1 +1,16 @@
-<h3 style="text-align: center; background-color: rgb(152, 166, 175);">Header Section</h3>
+<header>
+    <div class="container">
+        <a href="#">
+            <img src="" alt="logo"/>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="">Link</a></li>
+                <li><a href="">Link</a></li>
+                <li><a href="">Link</a></li>
+                <li><a href="">Link</a></li>
+                <li><a href="">Link</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
